Issue #20318: Correcting violation line for EqualsHashCodeCheck for Override